# assemblycfg

./: CITATION.cff  README.md  cfg.bib  cfg_ai.py  pyproject.toml  setup.py
CFG/: __init__.py  cfg_ai.py  det.py  utils.py
assemblycfg/: __init__.py  cfg_ai.py  utils.py
examples/: example.py  lipids.py
tests/: test_det.py  test_general.py  tests_det.py
