[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CFG"
version = "1.1.0"
description = "AI bounds using smallest grammar algorithm re-pair."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"

authors = [
    { name = "Gage Siebert" },
    { name = "Redwan Chowdhury" },
    { name = "Louie Slocombe" },
]

dependencies = [
    "networkx>=3.4.2",
    "matplotlib>=3.10.1",
    "rdkit>=2025.3.3",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/ELIFE-ASU/CFG"
Repository = "https://github.com/ELIFE-ASU/CFG"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
