[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CFG"
version = "1.2.0"
description = "AI bounds using smallest grammar algorithm re-pair."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Gage Siebert" },
    { name = "Redwan Chowdhury" },
    { name = "Louie Slocombe" },
]

dependencies = [
    "networkx>=3.4.2",
    "matplotlib>=3.9.2",
    "rdkit>=2024.03.5",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/ELIFE-ASU/CFG"
Repository = "https://github.com/ELIFE-ASU/CFG"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
