[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assemblycfg"
version = "1.2.1"
description = "AI bounds using smallest grammar algorithm re-pair."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Gage Siebert" },
    { name = "Redwan Chowdhury" },
    { name = "Louie Slocombe" },
    { name = "Sara I. Walker" },
]

dependencies = [
    "networkx>=3.4.2",
    "matplotlib>=3.9.2",
    "rdkit>=2024.03.5",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/ELIFE-ASU/assemblycfg"
Repository = "https://github.com/ELIFE-ASU/assemblycfg"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

